juiceshop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop-ingress
  namespace: juiceshop
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: nginx
  rules:
    - host: vulnapp.local.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  juice-shop
                port:
                  number: 8000
